<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">بالتازار</string>
    <!--<string name="media_base_url">http://mybaltazar.com/public/storage/</string>-->
    <string name="base_url">http://10.104.24.114:8080/Baltazar/</string>
    <!--<string name="base_url">http://172.26.9.155:81/</string>-->
    <string name="media_base_url">http://10.104.24.114:8080/Baltazar/Uploads/</string>
    <!--<string name="media_base_url">http://172.26.9.155:81/Uploads/</string>-->

    <string name="image_dir">Image/</string>
    <string name="video_dir">Video/</string>
    <string name="voice_dir">Voice/</string>
    <string name="ok">تائید</string>
    <string name="error">خطا</string>
    <string name="no_network">در دسترسی به اینترنت مشکلی به وجود آمده است، لطفا تنظیمات شبگه گوشی خود را بررسی نمایید.</string>
    <string name="wifi_settings">تنظیمات wifi</string>
    <string name="mobile_data_settings">تنظیمات دیتا</string>
    <string name="exit">خروج</string>
    <string name="mobile_number">شماره تلفن همراه</string>
    <string name="mobile_number_hint">09--------</string>
    <string name="melli_code">کد ملی</string>
    <string name="login">ورود</string>
    <string name="not_registered">هنوز ثبت نام نکردی؟</string>
    <string name="connecting_to_server">در حال برقراری ارتباط…</string>
    <string name="wrong_credentials">شماره تلفن همراه یا رمزعبور اشتباه است</string>
    <string name="server_problem">لطفا از برقراری ارتباط اینترنت خود اطمینان حاصل نمایید</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="level">پایه تحصیلی</string>
    <string name="field">رشته</string>
    <string name="invitation_code">کد دعوت</string>
    <string name="register">ثبت نام</string>
    <string name="is_empty">خالی است!</string>
    <string name="not_correct">صحیح نیست!</string>
    <string name="qa">سوالات</string>
    <string name="shop">فروشگاه</string>
    <string name="league">لیگ</string>
    <string name="blog">وبلاگ</string>
    <string name="profile">پروفایل</string>
    <string name="my_questions">سوالات من</string>
    <string name="lesson_name_colon">نام درس:</string>
    <string name="level_colon">پایه:</string>
    <string name="correct_answer_colon">جایزه جواب صحیح:</string>
    <string name="count_colon">تعداد:</string>
    <string name="coin">سکه</string>
    <string name="minute">دقیقه</string>
    <string name="hour">ساعت</string>
    <string name="day">روز</string>
    <string name="week">هفته</string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
    <string name="new_question">سوال جدید</string>
    <string name="chapter">سرفصل</string>
    <string name="description">توضیحات</string>
    <string name="address">آدرس</string>
    <string name="send">ارسال</string>
    <string name="sendSuccess">با موفقیت ارسال شد</string>
    <string name="questionWillShowAfterConfirm">سوال شما پس از تایید به کاربران نشان داده خواهد شد</string>
    <string name="you">شما</string>
    <string name="answer">پاسخ</string>
    <string name="sendingAnswer">در حال ارسال پاسخ</string>
    <string name="recorded_voice">صدای ضبط شده</string>
    <string name="voice_error">خطا در پخش صدا!</string>
    <string name="view_answer">مشاهده پاسخ</string>
    <string name="unpublished">منتظر تائید</string>
    <string name="published">منتشر شده</string>
    <string name="has_answer">دارای پاسخ</string>
    <string name="correct_answer">جواب گرفتم!</string>
    <string name="answer_not_clear">پاسخ گویا نبود</string>
    <string name="irrelevant_answer">پاسخ نامرتبط</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="contact_us">تماس با ما</string>
    <string name="contact_us_text">لطفا نظرات و پیشنهادهای خود را برای افزایش کیفیت این سیستم با ما در میان بگذارید:</string>
    <string name="price">قیمت:</string>
    <string name="buy">خرید</string>
    <string name="your_coin_count">تعداد سکه های شما:</string>
    <string name="order_done">سفارش شما ثبت شد!</string>
    <string name="upgrade">بروز رسانی</string>
    <string name="continue_app">ادامه</string>
    <string name="grade">مقطع:</string>
    <string name="course_name">نام درس:</string>
    <string name="filter">فیلتر لیست</string>
    <string name="cancell">انصراف</string>
    <string name="all">همه</string>
    <string name="baltazar_question">سوال بالتازار</string>
    <string name="points">مجموع امتیازات:</string>
    <string name="league_points">امتیاز از سوالات بالتازار:</string>
    <string name="other_questions_points">امتیاز از سوالات دانش آموزان:</string>
    <string name="score">رتبه من در تمام پایه ها:</string>
    <string name="scoreOnGrade">رتبه من در پایه انتخابی:</string>
    <string name="top10OnGrade">10 نفر برتر در پایه انتخابی</string>
    <string name="top10OnFestival">10 نفر برتر در تمام پایه ها</string>
    <string name="top10Total">10 نفر برتر در کل</string>
    <string name="fill_profile">تکمیل اطلاعات پروفایل + جایزه!</string>
    <string name="invite_friends_with_prize">دعوت از دوستان + جایزه!</string>
    <string name="invite_friends">دعوت از دوستان</string>
    <string name="view_coin_transactions">مشاهده تراکنش سکه های من</string>
    <string name="transaction_type_question_answer">جایزه پاسخ به سوال</string>
    <string name="transaction_type_league_answer">جایزه پاسخ به سوال لیگ</string>
    <string name="transaction_type_buy">خرید از فروشگاه</string>
    <string name="transaction_type_ask_question">پرسیدن سوال</string>
    <string name="coin_transactions">تراکنش سکه ها</string>
    <string name="rejected">رد شده</string>
    <string name="name_lastName_colon">نام و نام خانوادگی:</string>
    <string name="name_lastName">نام و نام خانوادگی</string>
    <string name="membershipDuration">مدت عضویت:</string>
    <string name="myTotalPoints">امتیاز کل من:</string>
    <string name="myTotalScore">رتبه کل من:</string>
    <string name="myCurrentGrade">پایه تحصیلی من:</string>
    <string name="myCurrentField">رشته تحصیلی من:</string>
    <string name="nickName">نام مستعار:</string>
    <string name="festival">لیگ</string>
    <string name="change">تغییر</string>
    <string name="additional_profile">تکمیل اطلاعات پروفایل</string>
    <string name="optional">اختیاری</string>
    <string name="birthdate">تاریخ تولد:</string>
    <string name="province">استان:</string>
    <string name="city">شهر:</string>
    <string name="gender">جنسیت:</string>
    <string name="schoolName">نام مدرسه:</string>
    <string name="schoolPhoneNumber">تلفن مدرسه:</string>
    <string name="schoolAddress">آدرس مدرسه:</string>
    <string name="value_incorrect">مقدار صحیح نیست!</string>
    <string name="boy">پسر</string>
    <string name="girl">دختر</string>
    <string name="sure_to_delete_question">آیا برای حذف سوال خود مطمئن هستید؟</string>
    <string name="yes">بلی</string>
    <string name="other_courses">سایر دروس</string>
    <string name="sure_to_buy">آیا از خرید این کالا مطمئن هستید؟\nکالا پس از تائید توسط بالتازار، به آدرس مدرسه شما که در قسمت اطلاعات پروفایل تکمیل کرده اید ارسال خواهد شد.</string>
    <string name="not_enough_coins">تعداد سکه شما برای خرید کافی نیست!</string>
    <string name="sure_to_approve_answer">آیا برای تائید این جواب مطمئن هستید؟</string>
    <string name="sure_to_reject_answer">آیا برای رد این جواب مطمئن هستید؟</string>
    <string name="sure_to_report_answer">آیا برای گزارش این جواب مطمئن هستید؟</string>
    <string name="invite_description">با اشتراک کد زیر با دوستان و همکلاسی های خود،\n3 سکه به آنها هدیه دهید و پس از ثبت نام آنها،\nشما نیز 5 سکه دریافت خواهید کرد.</string>
    <string name="invitation_copied">کد معرفی کپی شد</string>
    <string name="invitation_share_message">"سلام\nاپلیکیشن بالتازار رو دانلود کن و با کد دعوت زیر ثبت نام کن تا 3 سکه جایزه بگیری\nبالتازار اپلیکیشنی برای سوال و جواب و رفع اشکال درسهامونه.\nاپلیشکیشن بالتازار رو میتونی از http://mybaltazar.com دانلود کنی.\nکد دعوت: "</string>
    <string name="invite_email_subject">کد دعوت بالتازار</string>
    <string name="send_email">ارسال ایمیل</string>
    <string name="telegram_not_installed">برنامه تلگرام نصب نشده است!</string>
    <string name="share_using">ارسال با…</string>
    <string name="additional_profile_info">با تکمیل اطلاعات این صفحه 5 سکه جایزه بگیرید!</string>
    <string name="message" tools:ignore="ExtraTranslation">پیام</string>
    <string name="leagues_archive">امتیاز من در لیگهای قبلی</string>
    <string name="my_orders">خریدهای من</string>
    <string name="status">وضعیت:</string>
    <string name="sending">در حال ارسال</string>
    <string name="sent">ارسال شده</string>
    <string name="enter_correct">لطفا اطلاعات خود را صحیح وارد کنید.\nاین اطلاعات صرفا برای بهبود خدمات در بالتازار استفاده خواهد شد.</string>
    <string name="email_optional">شماره تماس یا تلگرام و یا ایمیل شما</string>
    <string name="more">بیشتر</string>
    <string name="myAnswersCount">تعداد جوابهای من:</string>
    <string name="myAcceptedAnswersCount">تعداد جوابهای صحیح من:</string>
    <string name="requestWithdrawal">درخواست تسویه حساب</string>
    <string name="enter_card_num">کارت بانکی خود را وارد کنید:</string>
    <string name="league_description">توجه: محاسبه و بروز رسانی امتیازات و رتبه ها\n با فاصله یک ساعت اعمال میشود.</string>
    <string name="question_details">شرح سوال</string>

    <string-array name="grades">
        <item>اول</item>
        <item>دوم</item>
        <item>سوم</item>
        <item>چهارم</item>
        <item>پنجم</item>
        <item>ششم</item>
        <item>هفتم</item>
        <item>هشتم</item>
        <item>نهم</item>
        <item>دهم</item>
        <item>یازدهم</item>
        <item>دوازدهم</item>
    </string-array>
</resources>
