<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdditionalProfileActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:layoutDirection="rtl"
        android:useDefaultMargins="true"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/additional_profile_info"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:layout_gravity="center_vertical|right"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr">

            <EditText
                android:id="@+id/txtBirthYear"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number"
                android:gravity="center">
                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/txtBirthMonth"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                android:inputType="number"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/txtBirthDay"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                android:inputType="number"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/province"/>

        <Spinner
            android:id="@+id/spinnerProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/city"/>

        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/gender"/>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/schoolName"/>

        <EditText
            android:id="@+id/txtSchoolName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center_vertical|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/schoolPhoneNumber"/>

        <EditText
            android:id="@+id/txtSchoolPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:layout_gravity="center_vertical|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/schoolAddress"/>

        <EditText
            android:id="@+id/txtSchoolAddress"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:inputType="textMultiLine"
            android:layout_gravity="center_vertical|right"
            android:gravity="right|center_vertical"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_columnSpan="2"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"/>
    </GridLayout>

</ScrollView>