<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baltazar_typo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/txtMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/melli_code"/>

    <EditText
        android:id="@+id/txtMelliCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/lblRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/not_registered"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="8dp"/>
</LinearLayout>