<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baltazar_typo"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textDirection="rtl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtMobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melli_code"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/txtMelliCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/spinnerGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblStudyField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/field"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/spinnerStudyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/invitation_code"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/txtInvitationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

</ScrollView>