<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/cardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="6dp">


        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"/>


        <ozaydin.serkan.com.image_zoom_view.ImageViewZoom
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/lblCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginRight="6dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin"
                android:layout_marginRight="8dp"/>

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/buy"
                android:layout_marginRight="24dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>