<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:gravity="right"/>

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"/>

            <TextView
                android:id="@+id/lblStatus"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:textSize="18dp"
                android:textColor="@color/colorAccent"
                android:text="منتظر تائید"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/lblPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginRight="6dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/coin"
                android:layout_marginRight="8dp"/>


            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_delete"
                android:padding="3dp"
                android:tint="@color/red"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>